service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tutorial
  labels:
    app: tutorial

spec:
  ports:
  - port: 8090
    targetPort: 8090
  selector:
    app: tutorial
