ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tutorial1-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: tutorial
            servicePort: 8090
